# fastapi_zero

./: .gitignore  README.md  pyproject.toml
fastapi_zero/: app.py  settings.py
fastapi_zero/models/: __init__.py
fastapi_zero/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 4250e3fda43a_create_user_table.py
tests/: conftest.py  database.db  test_app.py  test_db.py
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_235eb8486fb5120c_schemas_py.html  z_5abca1d0fc12551e___init___py.html  z_5abca1d0fc12551e_app_py.html  z_5abca1d0fc12551e_schemas_py.html  z_b84efa92b68889e7_models_py.html
